--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card mb-4">
-        <img src="img/prof.jpg" class="card-img-top" alt="Team Member 1">
+        <img src="https://images.ctfassets.net/h6goo9gw1hh6/2sNZtFAWOdP1lmQ33VwRN3/24e953b920a9cd0ff2e1d587742a2472/1-intro-photo-final.jpg?w=1200&h=992&q=70&fm=webp" class="card-img-top" alt="Team Member 1">
         <div class="card-body">
           <h5 class="card-title">Mark James Montoya</h5>
           <h6 class="card-text">Founder & CEO</h6>
@@ -60,18 +60,7 @@
 
     <div class="col-md-4">
       <div class="card mb-4">
-        <img src="img/prof.jpg" class="card-img-top" alt="Team Member 2">
-        <div class="card-body">
-          <h5 class="card-title">Jimmuel Cyrous Reyes</h5>
-          <h6 class="card-text">Marketing Manager</h6>
-          <p>Jimmuel Cyrous Reyes is our Marketing Manager, bringing creativity and strategic thinking to the Summer Shades team. With a background in marketing and a passion for fashion, Jimmuel plays a key role in promoting our brand and connecting with our audience. His innovative marketing campaigns ensure that Summer Shades remains at the forefront of the eyewear industry.</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <img src="img/prof.jpg" class="card-img-top" alt="Team Member 3">
+        <img src="https://wallpapers.com/images/hd/meme-profile-picture-erj8324r4q9rbnlx.jpg" class="card-img-top" alt="Team Member 3">
         <div class="card-body">
           <h5 class="card-title">Mark Emerald Sibug</h5>
           <h6 class="card-text">Product Designer</h6>
