--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
     <div class="col-md-4">
       <div class="card mb-4">
-        <img src="https://wallpapers.com/images/hd/meme-profile-picture-erj8324r4q9rbnlx.jpg" class="card-img-top" alt="Team Member 3">
+        <img src="https://wallpapers.com/images/hd/meme-profile-picture-erj8324r4q9rbnlx.jpg" class="card-img-top" alt="Team Member 3" style="height: 50%;">
         <div class="card-body">
           <h5 class="card-title">Mark Emerald Sibug</h5>
           <h6 class="card-text">Product Designer</h6>
