--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card mb-4">
-        <img src="https://images.ctfassets.net/h6goo9gw1hh6/2sNZtFAWOdP1lmQ33VwRN3/24e953b920a9cd0ff2e1d587742a2472/1-intro-photo-final.jpg?w=1200&h=992&q=70&fm=webp" class="card-img-top" alt="Team Member 1">
+        <img src="img/prof.jpg" class="card-img-top" alt="Team Member 1">
         <div class="card-body">
           <h5 class="card-title">Mark James Montoya</h5>
           <h6 class="card-text">Founder & CEO</h6>
@@ -58,9 +58,11 @@
       </div>
     </div>
 
+
+
     <div class="col-md-4">
       <div class="card mb-4">
-        <img src="https://wallpapers.com/images/hd/meme-profile-picture-erj8324r4q9rbnlx.jpg" class="card-img-top" alt="Team Member 3" style="height: 50%;">
+        <img src="img/prof.jpg" class="card-img-top" alt="Team Member 3">
         <div class="card-body">
           <h5 class="card-title">Mark Emerald Sibug</h5>
           <h6 class="card-text">Product Designer</h6>
