--- a/about.html
+++ b/about.html
@@ -71,7 +71,19 @@
       </div>
     </div>
   </div>
+ <div class="row">
+    <div class="col-md-4">
+      <div class="card mb-4">
+        <img src="img/prof.jpg" class="card-img-top" alt="Team Member 1">
+        <div class="card-body">
+          <h5 class="card-title">Trese Mallari</h5>
+          <h6 class="card-text">Employee</h6>
+          <p>Trese,a person working for another person or a business firm for pay.</p>
 
+      
+        </div>
+      </div>
+    </div>
 </div>
 
 </body>
